--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,12 +3,19 @@
 var v=JSON.parse(obj);
 return v.year+"-"+v.month+"-"+v.date+" "+ v.hour+":"+ v.minute+":"+ v.second;
 }
+var keywords='博客,个人博客,';
+for(var i in tags) {
+    keywords += tags[i] + ",";
+}
 %>
 <html>
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="keywords" content="<%= keywords %>" />
+    <meta name="description" content="这是我的个人博客！欢迎光临！" />
+
     <title>首页</title>
     <style type="text/css">
         <%- include ../public/css/common.css%>
