--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -71,7 +71,7 @@
     font-size: 16px;
     line-height: 25px;
 }
-.others-container{
+.other-comment-container{
     padding: 0 30px 50px 30px;
     color: grey;
 }
@@ -151,7 +151,7 @@
 .btn-send:hover{
     background: deepskyblue;
 }
-.others-container{
+.other-comment-container{
     width: 100%;
     background: transparent;
     padding: 0;
