--- a/views/blogs/blog.ejs
+++ b/views/blogs/blog.ejs
@@ -62,7 +62,7 @@
                     <input type="button" value="发&nbsp;送" class="btn-send">
             </div>
             </div>
-            <div class="others-container">
+            <div class="other-comment-container">
             </div>
             <div class="more-blogs-container"><div class="btn-more">点击加载更多</div></div>
         </div>
