--- a/views/index.ejs
+++ b/views/index.ejs
@@ -92,6 +92,9 @@ for(var i in tags) {
                     昵称：<b>走向远方</b>
                     <br>
                     邮箱：<b>154330138@qq.com</b>
+                    <br>
+                    <br>
+                    访问量：<%= visits %>
                 </div>
             </div>
         </div>
