--- a/views/index.ejs
+++ b/views/index.ejs
@@ -89,9 +89,9 @@ for(var i in tags) {
             <div>
                 <div class="seperator">关于我</div>
                 <div class="about-me">
-                    昵称：<b>走向远方</b>
+                    昵称：<b><%= name %></b>
                     <br>
-                    邮箱：<b>154330138@qq.com</b>
+                    邮箱：<b><%= email %></b>
                     <br>
                     <br>
                     访问量：<%= visits %>
