--- a/public/css/publish.css
+++ b/public/css/publish.css
@@ -54,6 +54,7 @@
     min-height: 200px;
     min-width: 400px;
     overflow: hidden;
+    border-top: 1px solid gray;
 }
 
 .title-container{
@@ -63,16 +64,17 @@
     line-height: 50px;
 }
 .input-title-container{
-    float: right;
+    /*加了float在ie上取消预览会跑到下面去*/
+    /*float: left;*/
     height: 100%;
+    padding-left: 100px;
 }
 .input-title{
     width: 100%;
     height: 100%;
     border: none;
-    border-bottom: 1px solid gray;
+
     outline: none;
-    background: transparent;
     font-size: 24px;
     font-weight: bolder;
     padding-left: 5px;
@@ -83,10 +85,10 @@
     background: transparent;
     min-width: 100px;
     height: 100%;
-    border-bottom: 1px solid black;
+    text-align: center;
+    /*border-bottom: 1px solid black;*/
 }
 .selector-tag{
-    background: white;
     width: 100%;
     height: 100%;
     font-size: 20px;
@@ -94,6 +96,8 @@
     outline: none;
     text-align: center;
     color: #333;
+    padding:10px 0;
+    line-height: 50px;
 }
 .inupt-container {
     float: left;
@@ -133,7 +137,7 @@
 .preview-container {
     overflow: hidden;
     font-size: 18px;
-    float: left;
+    float: right;
     height: 100%;
     background: white;
     width: 100%;
