更改了新建文章预览时布局问题

--- a/public/css/publish.css
+++ b/public/css/publish.css
@@ -136,7 +136,7 @@
 .preview-container {
     overflow: hidden;
     font-size: 18px;
-    float: right;
+    float: left;
     height: 100%;
     background: white;
     width: 100%;
