--- a/public/css/common.css
+++ b/public/css/common.css
@@ -35,3 +35,9 @@ a{
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#add8e6', endColorstr='#fefefe')";
     background-image: -webkit-gradient(linear,left bottom,left top,color-start(0, #add8e6),color-stop(1, #fefefe));
 }
+
+.top{
+    color: red;
+    font-size: 10px;
+    font-weight: normal;
+}
