--- a/public/css/list.css
+++ b/public/css/list.css
@@ -55,7 +55,7 @@
     border-bottom: 1px solid antiquewhite;
 }
 .blog-title{
-    display: table;
+    display: inline-block;
     font-size: 25px;
     /*font-weight: bolder;*/
     min-width: 150px;
@@ -63,6 +63,9 @@
 .blog-title:hover{
     /*font-weight: bolder;*/
     text-decoration: underline;
+}
+.top:hover{
+    text-decoration: none;
 }
 .blog-brief{
     padding-top: 10px;
