--- a/public/css/publish.css
+++ b/public/css/publish.css
@@ -1,3 +1,6 @@
+body{
+    overflow: hidden;
+}
 .topbar-container{
     width: 100%;
     line-height: 60px;
@@ -52,7 +55,6 @@
     width: 100%;
     height: 100%;
     min-height: 200px;
-    min-width: 400px;
     overflow: hidden;
     border-top: 1px solid gray;
 }
