--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>首页</title>
+    <title>后台管理</title>
     <style type="text/css">
         <%- include ../../public/css/common.css%>
         <%- include ../../public/css/login.css%>
@@ -18,7 +18,7 @@
         <div class="clearFloat"></div>
     </div>
     <form class="form-login" method="post" action="/">
-        <input type="text"class="form-input user" placeholder="管理员名称" value="管理员名称">
+        <input type="text"class="form-input user" placeholder="管理账号">
         <div class="line"></div>
         <input type="password" class="form-input passwd" placeholder="密码" >
         <input type="button" value="登 录" class="btn-login">
