--- a/views/blogs/blog.ejs
+++ b/views/blogs/blog.ejs
@@ -8,7 +8,7 @@
     <meta name="keywords" content="<%= tags[tag] %>" />
     <meta name="description" content="<%= brief.replace(/\n/g,'。') %>" />
 
-    <title>文章</title>
+    <title><%= title %></title>
     <link rel="stylesheet" href="/css/highlight/github.css">
     <style type="text/css">
         <%- include ../../public/css/common.css%>
