--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@ for(var i in tags) {
 <div>
     <div class="top-container bg">
             <img src="/img/logo.png" class="logo">
-            <div class="name">I LOVE YOU</div>
+            <div class="name"><%= blog %></div>
         <% if(isLogined){ %>
         <a href="/blogs/publish"><div class="btn-new">+</div></a>
         <% } %>
