--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -51,7 +51,18 @@
 .btn:hover{
     background: deepskyblue;
 }
-
+.inof-container{
+    padding-left: 5px;
+}
+.info-item{
+    background: lightblue;
+    padding: 2px 5px;
+}
+.info-item-key{
+    color: grey;
+    font-size: 12px;
+    padding-right: 3px;
+}
  .tag-item{
      margin: 5px;
      float: left;
@@ -245,6 +256,54 @@
     cursor: pointer;
     background: navajowhite;
 }
+
+
+.form-container{
+    max-width: 300px;
+    width: 100%;
+    display: table;
+    margin: 0 auto;
+    padding: 0 5px;
+    font-size: 14px;
+}
+.form-row{
+    width: 100%;
+    height: 40px;
+}
+.form-label{
+    color: grey;
+    background: white;
+    float: left;
+    width: 80px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    /*display: inline-block;*/
+}
+.form-input{
+    height: 100%;
+    width: 100%;
+    padding-left: 80px;
+    background: red;
+
+}
+.form-input input{
+    font-size: 20px;
+    font-weight: bold;
+    width: 100%;
+    height: 40px;
+    border: none;
+    outline: none;
+    margin: 0;
+    float: left;
+    line-height: 40px;
+}
+
+#tip{
+    height: 20px;
+    color: red;
+}
+
 @media(max-width: 800px){
     .logo{
         margin-left: 10px
