--- a/views/blogs/publish.ejs
+++ b/views/blogs/publish.ejs
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>发布文章</title>
+    <title>新建</title>
     <link rel="stylesheet" href="/css/highlight/github.css">
     <style type="text/css">
         <%- include ../../public/css/common.css%>
