--- a/views/blogs/list.ejs
+++ b/views/blogs/list.ejs
@@ -49,6 +49,7 @@
 
 <script src="/js/external/jquery1.3.2.js"></script>
 <script type="text/javascript">
+    <%- include ../../public/js/common.js%>
     <%- include ../../public/js/list.js%>
 </script>
 </body>
