--- a/views/blogs/publish.ejs
+++ b/views/blogs/publish.ejs
@@ -138,6 +138,7 @@
 <script src="/js/external/highlight.pack.js"></script>
 <script src="/js/external/marked.js"></script>
 <script type="text/javascript">
+    <%- include ../../public/js/common.js%>
     <%- include ../../public/js/publish.js%>
 </script>
 <script>hljs.initHighlightingOnLoad();</script>
