--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -58,16 +58,21 @@
             </div>
             <div class="clearFloat"></div>
         </div>
-        <div class="seperator">未回复评论</div>
+        <div class="seperator">评论</div>
+        <select class="select-comment">
+            <option value="1">未回复</option>
+            <option value="2">已回复</option>
+        </select>
         <div class="comment-container"></div>
-        <div class="more-blogs-container"><div class="btn-more">点击加载更多</div></div>
+        <div class="more-blogs-container"><div class="btn-more">加载更多</div></div>
     </div>
 </div>
 <div id="console"></div>
-<div id="comment-details">
-    <div class="comment-details-bg"></div>
+
+<!-- 查看评论详情的对话框 -->
+<div id="dialog-comment-details">
+    <div class="dialog-comment-details-bg"></div>
     <div id="comment-main-container"></div>
-</div>
 </div>
 
 <div id="dialog">
