--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -140,6 +140,7 @@
     padding: 5px;
 }
 .btn-send{
+    cursor: pointer;
     border: none;
     outline: none;font-size: 16px;
     float: right;
