--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>后台管理</title>
+    <title>Bat博客系统</title>
     <style type="text/css">
         <%- include ../../public/css/common.css%>
         <%- include ../../public/css/login.css%>
@@ -14,7 +14,7 @@
 <div>
     <div class="topbar-container bg">
         <a href="/" ><img src="/img/logo.png" class="logo" ></a>
-        <div class="name">后台管理</div>
+        <div class="name">Bat&nbsp;博客系统</div>
         <div class="clearFloat"></div>
     </div>
     <form class="form-login" method="post" action="/">
@@ -28,6 +28,7 @@
 </div>
 
 <script src="/js/external/jquery1.3.2.js"></script>
+<script src="/js/external/md5.js"></script>
 <script type="text/javascript">
     <%- include ../../public/js/login.js%>
 </script>
