--- a/views/blogs/blog.ejs
+++ b/views/blogs/blog.ejs
@@ -25,7 +25,7 @@
         <a href="/" class="logo"><img src="/img/logo.png" style="height: 60px;float: left"></a>
         <a href="/blogs?tag=<%= tag %>"><div class="btn-list">文章</div></a>
         <% if(isLogined){ %>
-        <a href="/blogs/publish"><div class="btn-new">+</div></a>
+        <a href="/blogs/publish"><div class="btn-new" title="新建文章">+</div></a>
         <% } %>
         <div class="clearFloat"></div>
         </div>
