--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -23,7 +23,7 @@
     border: none;
 }
 
-.btn-new{
+.btn-new,.btn-logout{
     display: table;
     font-size: 40px;
     float: right;
@@ -31,9 +31,24 @@
     margin-top: 38px;
     margin-right: 30px;
     color: #666;
+    cursor: pointer;
+}
+.btn-logout{
+    margin-top: 40px;
+    width: 22px;
+    height: 18px;
+    display: inline;
+    border: none;
+    filter: alpha(opacity=70);
+    -moz-opacity: 0.7;
+    opacity: 0.7;
+}
+.btn-logout:hover{
+    filter: alpha(opacity=100);
+    -moz-opacity: 1;
+    opacity: 1;
 }
 .btn-new:hover{
-    cursor: pointer;
     color: #000;
 }
 
@@ -119,7 +134,7 @@
 .content{
     width: 100%;
     height: 200px;
-    overflow-y: auto;
+    /*overflow-y: auto;*/
 }
 .comment-container{
     display: table;
@@ -304,7 +319,7 @@
     color: grey;
     background: white;
     float: left;
-    width: 80px;
+    width: 65px;
     height: 40px;
     text-align: center;
     line-height: 40px;
@@ -313,9 +328,8 @@
 .form-input{
     height: 100%;
     width: 100%;
-    padding-left: 80px;
+    padding-left: 65px;
     background: red;
-
 }
 .form-input input{
     font-size: 20px;
@@ -327,11 +341,19 @@
     margin: 0;
     float: left;
     line-height: 40px;
+    border-bottom: 1px solid #eee;
 }
 
 #blog-info-tip{
     height: 20px;
     color: red;
+}
+#btn-modify-passowrd{
+    padding-top: 3px;
+     color: #aaa;
+    font-weight: normal;
+    font-size: 12px;
+    cursor: pointer;
 }
 
 @media(max-width: 800px){
@@ -341,7 +363,7 @@
     .name{
         margin-left: 10px;
     }
-    .btn-new{
+    .btn-new,.btn-logout{
         margin-right: 10px;
     }
 }
