--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,18 +4,20 @@
     height: 100px;
 }
 .logo{
-    height: 100%;
+    height: 60px;
     float: left;
     margin-left: 30px;
 }
 .name{
+    display: none;
+    width: 80%;
     float: left;
     height: 100%;
     font-weight: bold;
     font-size: 38px;
     text-align: center;
-    padding-top: 50px;
-    margin-left: 30px;
+    margin: auto;
+    padding-top: 10px;
 }
 .btn-new{
     margin-top: 77px;
@@ -165,16 +167,11 @@
     }
     .logo{
         margin-left: 10px;
-        margin-top: 58px;
-        height: 40%;
+        height: 40px;
     }
     .name{
         font-size: 30px;
-        text-align: center;
-        margin: auto;
-        padding: 0;
-        padding-top: 20px;
-
+        padding-top: 10px;
     }
     .btn-new{
         float: right;
